tests/snapshots/integration_tests__example_29-test_optimizer_error.snap
---
source: tests/integration_tests.rs
expression: error_text
---
Parse error: Expected { expected: "EOI, NEWLINE, COMMENT, keyword_neuron, lbracket, endpoint, or neuron_section", found: "unexpected input", span: SourceSpan { offset: SourceOffset(1764), length: 1 } }
