tests/snapshots/integration_tests__example_MetaNeurons.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron ParallelFFN(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> FFN#0(dim, (dim * 2))
    FFN#0(dim, (dim * 2)) -> out
