tests/snapshots/integration_tests__example_MultiHeadAttention.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron GroupedQueryAttention(d_model, num_query_heads, num_kv_heads):
  inputs:
    default: [batch, seq, d_model]
  outputs:
    default: [batch, seq, d_model]
  graph:
    in -> (q_path, k_path, v_path)
    q_path -> Linear#4(d_model, d_model)
    Linear#4(d_model, d_model) -> query
    k_path -> Linear#5(d_model, ((d_model * num_kv_heads) / num_query_heads))
    Linear#5(d_model, ((d_model * num_kv_heads) / num_query_heads)) -> key
    v_path -> Linear#6(d_model, ((d_model * num_kv_heads) / num_query_heads))
    Linear#6(d_model, ((d_model * num_kv_heads) / num_query_heads)) -> value
    attended -> Linear#7(d_model, d_model)
    Linear#7(d_model, d_model) -> out

neuron MultiHeadCrossAttention(d_model, num_heads):
  inputs:
    query: [batch, seq_q, d_model]
    kv: [batch, seq_kv, d_model]
  outputs:
    default: [batch, seq_q, d_model]
  graph:
    query -> Linear#0(d_model, d_model)
    Linear#0(d_model, d_model) -> q
    kv -> (k_path, v_path)
    k_path -> Linear#1(d_model, d_model)
    Linear#1(d_model, d_model) -> k
    v_path -> Linear#2(d_model, d_model)
    Linear#2(d_model, d_model) -> v
    attended -> Linear#3(d_model, d_model)
    Linear#3(d_model, d_model) -> out

neuron MultiHeadSelfAttention(d_model, num_heads):
  inputs:
    default: [*batch, seq, d_model]
  outputs:
    default: [*batch, seq, d_model]
  impl:
    Source: primitives,attention/MultiHeadSelfAttention

neuron MultiQueryAttention(d_model, num_heads):
  inputs:
    default: [batch, seq, d_model]
  outputs:
    default: [batch, seq, d_model]
  graph:
    in -> GroupedQueryAttention#8(d_model, num_heads, 1)
    GroupedQueryAttention#8(d_model, num_heads, 1) -> out

neuron ScaledDotProductAttention:
  inputs:
    query: [*batch, seq_q, d_k]
    key: [*batch, seq_k, d_k]
    value: [*batch, seq_k, d_v]
  outputs:
    default: [*batch, seq_q, d_v]
  impl:
    Source: primitives,attention/ScaledDotProductAttention
