tests/snapshots/integration_tests__example_codegen_demo.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Add:
  inputs:
    left: [*shape]
    right: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Add

neuron BranchingNetwork(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> Fork#5()
    Fork#5() -> (path_a, path_b)
    path_a -> LayerNorm#6(dim)
    LayerNorm#6(dim) -> processed_a
    path_b -> GELU#7()
    GELU#7() -> processed_b
    (processed_a, processed_b) -> Add#8()
    Add#8() -> out

neuron DeepResidualNetwork(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> ResidualFFN#31(dim, expansion=4, dropout_rate=0.1)
    ResidualFFN#31(dim, expansion=4, dropout_rate=0.1) -> ResidualFFN#32(dim, expansion=4, dropout_rate=0.1)
    ResidualFFN#32(dim, expansion=4, dropout_rate=0.1) -> ResidualFFN#33(dim, expansion=4, dropout_rate=0.1)
    ResidualFFN#33(dim, expansion=4, dropout_rate=0.1) -> out

neuron Dropout(p = 0.1):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,nn/Dropout

neuron DualPathProcessor(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> LayerNorm#22(dim)
    LayerNorm#22(dim) -> normalized
    normalized -> Fork#23()
    Fork#23() -> (path1, path2)
    path1 -> Linear#24(dim, (dim * 4))
    Linear#24(dim, (dim * 4)) -> GELU#25()
    GELU#25() -> Linear#26((dim * 4), dim)
    Linear#26((dim * 4), dim) -> result1
    path2 -> GELU#27()
    GELU#27() -> Dropout#28(p=0.05)
    Dropout#28(p=0.05) -> result2
    (result1, result2) -> Add#29()
    Add#29() -> merged
    merged -> LayerNorm#30(dim)
    LayerNorm#30(dim) -> out

neuron FFN(dim, expansion = 4):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> Linear#2(dim, (dim * expansion))
    Linear#2(dim, (dim * expansion)) -> GELU#3()
    GELU#3() -> Linear#4((dim * expansion), dim)
    Linear#4((dim * expansion), dim) -> out

neuron Fork:
  inputs:
    default: [*shape]
  outputs:
    a: [*shape]
    b: [*shape]
  impl:
    Source: core,builtin/Fork

neuron GELU:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,activations/GELU

neuron LayerNorm(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  impl:
    Source: core,nn/LayerNorm

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*, in_dim]
  outputs:
    default: [*, out_dim]
  impl:
    Source: core,nn/Linear

neuron MultiStageNetwork(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> LayerNorm#16(dim)
    LayerNorm#16(dim) -> normalized
    normalized -> Linear#17(dim, (dim * 2))
    Linear#17(dim, (dim * 2)) -> expanded
    expanded -> GELU#18()
    GELU#18() -> activated
    activated -> Dropout#19()
    Dropout#19() -> regularized
    regularized -> Linear#20((dim * 2), dim)
    Linear#20((dim * 2), dim) -> contracted
    contracted -> LayerNorm#21(dim)
    LayerNorm#21(dim) -> out

neuron ResidualFFN(dim, expansion = 4, dropout_rate = 0.1):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> Fork#9()
    Fork#9() -> (main_path, skip_path)
    main_path -> LayerNorm#10(dim)
    LayerNorm#10(dim) -> Linear#11(dim, (dim * expansion))
    Linear#11(dim, (dim * expansion)) -> GELU#12()
    GELU#12() -> Dropout#13(p=dropout_rate)
    Dropout#13(p=dropout_rate) -> Linear#14((dim * expansion), dim)
    Linear#14((dim * expansion), dim) -> transformed
    (transformed, skip_path) -> Add#15()
    Add#15() -> out

neuron SimplePipeline(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> LayerNorm#0(dim)
    LayerNorm#0(dim) -> GELU#1()
    GELU#1() -> out
