tests/snapshots/integration_tests__example_comprehensive_error.snap
---
source: tests/integration_tests.rs
expression: error_text
---
Parse error: Expected { expected: "COMMENT or arrow", found: "unexpected input", span: SourceSpan { offset: SourceOffset(11794), length: 1 } }
